Version 1.0 published Minor issues fixed